tests/cancel/cancel_4.stderr
error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_4.rs:80:40
   |
79 |     cancel(s.session1);
   |            ---------- value partially moved here
80 |     let s = send_mpst_a_to_b(random(), s);
   |                                        ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `mpstthree::binary::Send<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait

error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_4.rs:87:35
   |
85 |     cancel(s.session1);
   |            ---------- value partially moved here
86 |
87 |     let (_, s) = recv_mpst_b_to_a(s)?;
   |                                   ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `Recv<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait
